Fixing tests and fixing some taskdata and mdc errors